--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,20 @@
     ]
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
+    "@hookform/resolvers": "^3.9.1",
     "@redwoodjs/auth-dbauth-web": "8.4.1",
     "@redwoodjs/forms": "8.4.1",
     "@redwoodjs/router": "8.4.1",
     "@redwoodjs/web": "8.4.1",
+    "@uiw/codemirror-extensions-color": "^4.23.6",
+    "@uiw/codemirror-themes": "^4.23.6",
+    "@uiw/react-codemirror": "^4.23.6",
     "humanize-string": "2.1.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-shadow": "^20.5.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@redwoodjs/vite": "8.4.1",
